--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 h3
 h4
 
-ul
-ol
-li
+
 a
 sup
 
@@ -37,5 +35,11 @@ strong
         <li><strong>Volume:</strong>2.1958 × 10<sup>10</sup> km<sup>3</sup></li>
         <li><strong>Mass:</strong>7.3477 × 10<sup>22</sup> kg</li>
     </ul>
+    <h3>Moon Landings</h3>
+    <ol>
+        <strong><li>Apollo 11</li></strong>
+        <p>July 20, 1969</p>
+        <p>Apollo 11 was an American spaceflight in which the astronauts Neil Armstrong and Buzz Aldrin became the first ever to land on the Moon on July 20, 1969, at 20:18 UTC. Further, Neil Armstrong became the first to step onto the Moon 6 hours after the landing on 21 July, 02:56 UTC.</p>
+    </ol>
 </body>
 </html>
